@@ -4,15 +4,17 @@ Hash: SHA1
 DIST database_cleaner-0.4.2.gem 12288 RMD160 a332edf4a5d231988024f8778dc2e985902d0572 SHA1 335835f90bbfc1a917dceb4e7e2aa91e4b90dcfe SHA256 ee23d57897e4e87d638b5e31017bfd120036528e2c74cd1393b2828a990da12c
 DIST database_cleaner-0.4.3.gem 12288 RMD160 cb32cb04a0dfbca0d1baf2d88b06692891b3e89c SHA1 54058e4cad3f7481ee89fcbab67c5e53154c66f9 SHA256 23a0ec31b336a50472359e55ea02de1f6bc1f792393984975a492195dd4130b0
 DIST database_cleaner-0.5.0.gem 13824 RMD160 5bd5f76f7099ad86f8929b75bb7d3815e2a66140 SHA1 7e803aaf441dbf2b98f8e4bf4ace66fb5f2944db SHA256 73f9e5cfe2dd29c2be90d5fe00133d21cee96c4639469568ac642f4f7129d62f
+DIST database_cleaner-0.5.2.gem 14848 RMD160 d12c1d1a1472222be41e7e78d27fe38a876fd19f SHA1 47c4dd2d68ccd3322cbed84ed326602902b603c3 SHA256 49f7fadb347fd178d5798c005b8bdab9f0c98b7c59cc43f04add67ce588d5f4f
 EBUILD database_cleaner-0.4.2.ebuild 658 RMD160 656d26885e9d2f3f3f92923ab88334139386e0de SHA1 af032243874ad2d5f846f4de9cdf205285bce404 SHA256 afc19cd7d20cdf592227a594def5ab141d7c0de2763d1decaac4bdaa9618318f
 EBUILD database_cleaner-0.4.3.ebuild 658 RMD160 656d26885e9d2f3f3f92923ab88334139386e0de SHA1 af032243874ad2d5f846f4de9cdf205285bce404 SHA256 afc19cd7d20cdf592227a594def5ab141d7c0de2763d1decaac4bdaa9618318f
 EBUILD database_cleaner-0.5.0.ebuild 803 RMD160 7666b615d13a89fb83220892833c6cf6c8b91102 SHA1 d43aa4a803e71f91a8f1ad9ed66f5413055257f5 SHA256 da1a04e7c0c66967b3de3d936f2e7227c32973e1d5792d8961ed514545c4e638
-MISC ChangeLog 1279 RMD160 8aa2e1cd07aaaad772a8fafbca0fbbf7d276cde4 SHA1 8114a21c8ec33825426bf56a056a0b3209978c70 SHA256 fdb86bc1685f760c2d6d08ec9b5d98b91f20ad66e12236ffe1eea9bb5e7e6202
+EBUILD database_cleaner-0.5.2.ebuild 803 RMD160 7666b615d13a89fb83220892833c6cf6c8b91102 SHA1 d43aa4a803e71f91a8f1ad9ed66f5413055257f5 SHA256 da1a04e7c0c66967b3de3d936f2e7227c32973e1d5792d8961ed514545c4e638
+MISC ChangeLog 1433 RMD160 ce418d46d783cfec1f0965dc214a75c9128497d7 SHA1 4f7162b583f67a6e7d04769f8b055c613b840a37 SHA256 92dcd64a9166192f94b102554e5258694f910f873bde7195ed579868e9bc74de
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvRt8sACgkQeM7EJeUH71M1CQCbBpK4KrNnQsG6gE22XvwDC3G1
-G5wAoIhfa+M3APcp8tl9MKvA0LXQNqHT
-=nHtc
+iEYEARECAAYFAkvkAZ4ACgkQeM7EJeUH71OtZwCeJlIJLFIKG5xE0ED3/mUeaGBX
+vE0An1Z/hMakzu55VQcPGW8shg9jmvwt
+=Sgiy
 -----END PGP SIGNATURE-----
